--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,41 @@
 {
-    "name": "dive-be/:package_name",
-    "description": ":package_description",
+    "name": "dive-be/laravel-expo-channel",
+    "description": "Expo Notifications Channel for Laravel",
     "keywords": [
         "dive",
-        ":package_name"
+        "laravel",
+        "notifications",
+        "expo",
+        "exponent",
+        "react-native"
     ],
-    "homepage": "https://github.com/dive-be/:package_name",
+    "homepage": "https://github.com/dive-be/laravel-expo-channel",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
+            "name": "Muhammed Sari",
+            "email": "muhammed@dive.be",
             "homepage": "https://dive.be",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/console": "^9.0",
-        "illuminate/contracts": "^9.0",
+        "ext-json": "*",
+        "illuminate/http": "^9.0",
+        "illuminate/notifications": "^9.0",
         "illuminate/support": "^9.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.8",
+        "friendsofphp/php-cs-fixer": "^3.10",
         "nunomaduro/larastan": "^2.1",
-        "orchestra/testbench": "^7.5",
+        "orchestra/testbench": "^7.7",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.2"
     },
     "autoload": {
-        "files": [
-            "src/helpers.php"
-        ],
         "psr-4": {
-            "Dive\\Skeleton\\": "src",
-            "Dive\\Skeleton\\Database\\Factories\\": "database/factories"
+            "NotificationChannels\\Expo\\": "src"
         }
     },
     "autoload-dev": {
@@ -43,21 +44,22 @@
         }
     },
     "scripts": {
-        "analyse": "vendor/bin/phpstan analyse --memory-limit=2G",
+        "larastan": "vendor/bin/phpstan analyse --memory-limit=2G",
         "format": "vendor/bin/php-cs-fixer fix --config .php-cs-fixer.dist.php --allow-risky=yes",
-        "test": "vendor/bin/pest"
+        "test": "vendor/bin/pest",
+        "verify": "@composer larastan && composer test"
     },
     "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        },
         "sort-packages": true
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Dive\\Skeleton\\SkeletonServiceProvider"
-            ],
-            "aliases": {
-                "Skeleton": "Dive\\Skeleton\\Facades\\Skeleton"
-            }
+                "NotificationChannels\\Expo\\ServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
