--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,16 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "illuminate/http": "^9.0",
+        "ext-zlib": "*",
+        "guzzlehttp/guzzle": "^7.1",
+        "illuminate/contracts": "^9.0",
         "illuminate/notifications": "^9.0",
         "illuminate/support": "^9.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.10",
         "nunomaduro/larastan": "^2.1",
-        "orchestra/testbench": "^7.7",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.2"
+        "orchestra/testbench": "^7.7"
     },
     "autoload": {
         "psr-4": {
@@ -50,15 +50,12 @@
         "verify": "@composer larastan && composer test"
     },
     "config": {
-        "allow-plugins": {
-            "pestphp/pest-plugin": true
-        },
         "sort-packages": true
     },
     "extra": {
         "laravel": {
             "providers": [
-                "NotificationChannels\\Expo\\ServiceProvider"
+              "NotificationChannels\\Expo\\ExpoServiceProvider"
             ]
         }
     },
