--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     "scripts": {
         "larastan": "vendor/bin/phpstan analyse --memory-limit=2G",
         "format": "vendor/bin/php-cs-fixer fix --config .php-cs-fixer.dist.php --allow-risky=yes",
-        "test": "vendor/bin/pest",
+        "test": "vendor/bin/phpunit",
         "verify": "@composer larastan && composer test"
     },
     "config": {
