--- a/.gitattributes
+++ b/.gitattributes
@@ -4,10 +4,10 @@
 # Ignore all test and documentation with "export-ignore".
 /.gitattributes          export-ignore
 /.gitignore              export-ignore
+/art                     export-ignore
 /phpunit.xml.dist        export-ignore
 /tests                   export-ignore
 /.editorconfig           export-ignore
 /.php-cs-fixer.dist.php  export-ignore
 /phpstan.neon.dist       export-ignore
-/testbench.yaml          export-ignore
 /CONTRIBUTING.md         export-ignore
