--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": "^8.1",
         "ext-json": "*",
         "ext-zlib": "*",
+        "dive-be/php-enum-utils": "^1.1",
         "dive-be/php-utils": "0.1.0",
         "guzzlehttp/guzzle": "^7.1",
         "illuminate/contracts": "^9.18",
