--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,6 +31,7 @@
     </groups>
 
     <php>
+        <server name="APP_KEY" value="base64:AuEJX3yhL8cAmAEkNBl8PkiylImllP9+vn67WS/Y0A0=" />
         <server name="DB_CONNECTION" value="sqlite"/>
         <server name="DB_DATABASE" value=":memory:"/>
     </php>
