--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 # Ignore all test and documentation with "export-ignore".
 /.gitattributes          export-ignore
+/.github                 export-ignore
 /.gitignore              export-ignore
 /art                     export-ignore
 /phpunit.xml.dist        export-ignore
