--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "ext-zlib": "*",
         "dive-be/php-enum-utils": "^1.1",
         "dive-be/php-utils": "0.1.0",
         "guzzlehttp/guzzle": "^7.1",
@@ -31,9 +30,12 @@
         "illuminate/support": "^9.18"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.10",
-        "nunomaduro/larastan": "^2.1",
+        "friendsofphp/php-cs-fixer": "^3.11",
+        "nunomaduro/larastan": "^2.2",
         "orchestra/testbench": "^7.7"
+    },
+    "suggest": {
+        "ext-zlib": "Required for compressing payloads exceeding 1 KiB in size."
     },
     "autoload": {
         "psr-4": {
