--- a/composer.json
+++ b/composer.json
@@ -20,19 +20,20 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "~8.2",
         "ext-json": "*",
-        "dive-be/php-enum-utils": "^1.1",
+        "dive-be/php-enum-utils": "^1.2",
         "dive-be/php-utils": "0.1.0",
         "guzzlehttp/guzzle": "^7.1",
-        "illuminate/contracts": "^9.18",
-        "illuminate/notifications": "^9.18",
-        "illuminate/support": "^9.18"
+        "illuminate/contracts": "^10.0",
+        "illuminate/notifications": "^10.0",
+        "illuminate/support": "^10.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.11",
-        "nunomaduro/larastan": "^2.2",
-        "orchestra/testbench": "^7.7"
+        "friendsofphp/php-cs-fixer": "^3.16",
+        "nunomaduro/larastan": "^2.6",
+        "orchestra/testbench": "^8.5",
+        "phpunit/phpunit": "^10.1.2"
     },
     "suggest": {
         "ext-zlib": "Required for compressing payloads exceeding 1 KiB in size."
