--- a/composer.json
+++ b/composer.json
@@ -20,20 +20,20 @@
         }
     ],
     "require": {
-        "php": "~8.2",
+        "php": "~8.3",
         "ext-json": "*",
-        "dive-be/php-enum-utils": "^1.2",
-        "dive-be/php-utils": "0.1.0",
+        "dive-be/php-enum-utils": "^1.3",
+        "dive-be/php-utils": "^0.2.0",
         "guzzlehttp/guzzle": "^7.1",
-        "illuminate/contracts": "^10.0",
-        "illuminate/notifications": "^10.0",
-        "illuminate/support": "^10.0"
+        "illuminate/contracts": "^11.0",
+        "illuminate/notifications": "^11.0",
+        "illuminate/support": "^11.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.16",
-        "nunomaduro/larastan": "^2.6",
-        "orchestra/testbench": "^8.5",
-        "phpunit/phpunit": "^10.1.2"
+        "larastan/larastan": "^2.0",
+        "laravel/pint": "^1.0",
+        "orchestra/testbench": "^9.0",
+        "phpunit/phpunit": "^11.0"
     },
     "suggest": {
         "ext-zlib": "Required for compressing payloads exceeding 1 KiB in size."
@@ -50,7 +50,7 @@
     },
     "scripts": {
         "larastan": "vendor/bin/phpstan analyse --memory-limit=2G",
-        "format": "vendor/bin/php-cs-fixer fix --config .php-cs-fixer.dist.php --allow-risky=yes",
+        "format": "vendor/bin/pint",
         "test": "vendor/bin/phpunit",
         "verify": "@composer larastan && composer test"
     },
