--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,3 +10,6 @@ parameters:
     checkMissingIterableValueType: false
 
     checkGenericClassInNonGenericObjectType: false
+
+    ignoreErrors:
+        - '#Method NotificationChannels\\Expo\\Gateway\\ExpoGatewayUsingGuzzle::getPushTickets\(\) should return array but returns mixed.#'
